--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-API_URL=api_url
-API_USERNAME=username
-API_PASSWORD=password
+API_URL=https://api.golf-course-database.com:8000
+API_USERNAME=andrewwhite
+API_PASSWORD=Hd3@j2Dmh3
+DB_NAME=api_data
+DB_USER=user_one
+DB_PASSWORD=password
