--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_URL=https://api.golf-course-database.com:8000
+API_URL=api_url
 API_USERNAME=andrewwhite
 API_PASSWORD=Hd3@j2Dmh3
 DB_NAME=api_data
